--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "test:ci": "vitest run --config vitest.workers.config.ts --reporter basic"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.1.7",
-    "@cloudflare/workers-types": "^4.20240320.1",
-    "@types/node": "20.8.3",
-    "jose": "^5.2.2",
-    "miniflare": "^3.20240320.0",
-    "typescript": "^5.3.3",
+    "@cloudflare/vitest-pool-workers": "^0.1.19",
+    "@cloudflare/workers-types": "^4.20240405.0",
+    "@types/node": "^20.12.7",
+    "miniflare": "^3.20240405.1",
+    "typescript": "^5.4.4",
     "vitest": "1.3.0",
-    "wrangler": "^3.39.0"
+    "wrangler": "^3.50.0"
   }
 }
