--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.2.0",
     "@cloudflare/workers-types": "^4.20240405.0",
+    "@types/bun": "^1.1.0",
     "@types/node": "^20.12.7",
     "miniflare": "^3.20240405.2",
     "typescript": "^5.4.4",
