--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "typescript": "^5.4.4",
     "vitest": "1.3.0",
     "wrangler": "^3.51.0"
+  },
+  "dependencies": {
+    "ws": "^8.16.0"
   }
 }
